@@ -201,6 +201,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #26482: Allowed pickling recursive dequeues.
+
 - Issue #26335: Make mmap.write() return the number of bytes written like
   other write methods.  Patch by Jakub Stasiak.
 
